# faros_context_orchestrator

./: README.md  macro_context.yaml  pyproject.toml
data/: sample_event.json
data/db/: faros_context.db
data/markdown_files/: align_with_business_boundaries.md  assume_the_network_will_fail.md  asynchronous_analytics.md  build_deep_modules.md  context_aware_metrics.md  decentralize_data.md  decoupled_ingestion.md  design_for_orthogonality.md  don_t_repeat_yourself_dry.md  embrace_trade_offs.md  enforce_single_responsibility.md  ensure_independent_deployability.md  invest_strategically.md  leave_it_better_than_you_found_it.md  prioritize_readability.md  proactive_health_monitoring.md  sei_event_far_9482.md  tenant_id_partitioning.md  ui_library_governance.md
faros/: __init__.py  cli.py  config.py  server.py
faros/core/: __init__.py  ingestion.py  init_db.py  optimizer_rules.py  optimizer_sei.py
